<resources>
    <string name="app_name">WheatherApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_favourite">Favourite</string>
    <string name="title_setting">Settings</string>
    <string name="twenty_four_hour_forecast">24-hour forecast</string>
    <string name="seven_days_forecast">7-days forecast</string>
    <string name="pressure">Pressure</string>
    <string name="Wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="icon_description">Icon description</string>
    <string name="pressure_icon_description">Pressure icon description</string>
    <string name="windSpeed_icon_description">WindSpeed icon description</string>
    <string name="humidity_icon_description">Humidity icon description</string>
    <string name="clouds">Clouds</string>
    <string name="clouds_icon_description">Clouds icon description</string>
    <string name="Visibility">Visibility</string>
    <string name="visibility_icon_description">Visibility icon description</string>
    <string name="uv">Ulta vault ray</string>
    <string name="uv_icon_description">uv icon description</string>
    <string name="icon_day_description">Icon day description</string>
    <string name="icon_time_description">Icon time description</string>
    <string name="currentLocation">GPS</string>
    <string name="Map">Map</string>
    <string name="api_kay">"4a059725f93489b95183bbcb8c6829b9"</string>
    <string name="favPlace">Add to Favourite</string>
    <string name="flocation">"Your favourite Locations "</string>
    <string name="flocation1">"Your Favourite Locations "</string>
    <string name="noFavYet">No favourite yet</string>
    <string name="locationInMap">Location You choose in map</string>
    <string name="deleteFav">Delete your favourite location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noAlert">No alert yet</string>
    <string name="showAlertSetting">Show alert settings</string>
    <string name="weatherIcon">Weather Icone For design</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="deleteYourAlert">Delete your alert</string>
    <string name="alertsetting">Alert Settings</string>
    <string name="Notification">Notification</string>
    <string name="alertDailog">Alert Dailog</string>
    <string name="displayOnTop">Display on top</string>
    <string name="oh_btn">Ok</string>
</resources>