<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/locationFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wheatherapp.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.wheatherapp.ui.favourite.FavouriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.wheatherapp.ui.alert.AlertFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/locationFragment"
        android:name="com.example.wheatherapp.ui.location.LocationFragment"
        tools:layout="@layout/fragment_location"
        android:label="LocationFragment" >
        <action
            android:id="@+id/action_locationFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_locationFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.wheatherapp.ui.map.MapFragment"
        tools:layout="@layout/fragment_map"
        android:label="MapFragment" >
        <action
            android:id="@+id/action_mapFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>